--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flagger",
-  "version": "3.0.11",
+  "version": "3.0.12",
   "description": "An open source JavaScript SDK for feature flagging (feature gating, feature toggles) for Node.js and Javascript applications",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -15,7 +15,7 @@
     "build": "tsc && yarn rollup -c && rimraf temp",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
-    "test": "jest"
+    "test": "jest --collectCoverage"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
